Fixed some small rendering issues with the highcontrast skin.

--- a/jscripts/tiny_mce/themes/advanced/skins/highcontrast/dialog.css
+++ b/jscripts/tiny_mce/themes/advanced/skins/highcontrast/dialog.css
@@ -7,8 +7,6 @@ padding:0;
 margin:8px 8px 0 8px;
 }
 
-.mceIconOnly {display: block !important;}
-
 html {background:#F0F0EE; color:#000;}
 td {font-family:Verdana, Arial, Helvetica, sans-serif; font-size:10px;}
 textarea {resize:none;outline:none;}
@@ -32,7 +30,7 @@ input.checkbox {border:1px none #000000; background:transparent; vertical-align:
 /* Buttons */
 #insert, #cancel, input.button, .updateButton {
 font-weight:bold;
-width:94px; height:26px;
+width:94px; height:23px;
 cursor:pointer;
 padding-bottom:2px;
 float:left;
@@ -42,12 +40,12 @@ float:left;
 
 /* Browse */
 a.pickcolor, a.browse {text-decoration:none}
-a.browse span {display:block; width:20px; height:18px; background:url(img/icons.gif) -860px 0; border:1px solid #FFF; margin-left:1px;}
+a.browse span {display:block; width:20px; height:18px; background:url(../../img/icons.gif) -860px 0; border:1px solid #FFF; margin-left:1px;}
 .mceOldBoxModel a.browse span {width:22px; height:20px;}
 a.browse:hover span {border:1px solid #0A246A; background-color:#B2BBD0;}
 a.browse span.disabled {border:1px solid white; opacity:0.3; -ms-filter:'alpha(opacity=30)'; filter:alpha(opacity=30)}
 a.browse:hover span.disabled {border:1px solid white; background-color:transparent;}
-a.pickcolor span {display:block; width:20px; height:16px; background:url(img/ephox-icons.gif) -840px 0; margin-left:2px;}
+a.pickcolor span {display:block; width:20px; height:16px; background:url(../../img/icons.gif) -840px 0; margin-left:2px;}
 .mceOldBoxModel a.pickcolor span {width:21px; height:17px;}
 a.pickcolor:hover span {background-color:#B2BBD0;}
 a.pickcolor:hover span.disabled {}
@@ -65,11 +63,11 @@ td.charmap, #charmap a {width:18px; height:18px; color:#000; border:1px solid #A
 .mceActionPanel {margin-top:5px;}
 
 /* Tabs classes */
-.tabs {width:100%; height:18px; line-height:normal; background:url(img/tabs.gif) repeat-x 0 -72px;}
+.tabs {width:100%; height:18px; line-height:normal;}
 .tabs ul {margin:0; padding:0; list-style:none;}
-.tabs li {float:left; border: 1px solid black; margin:0 2px 0 0; padding:0 0 0 10px; line-height:17px; height:18px; display:block; cursor:pointer;}
+.tabs li {float:left; border: 1px solid black; border-bottom:0; margin:0 2px 0 0; padding:0 0 0 10px; line-height:17px; height:18px; display:block; cursor:pointer;}
 .tabs li.current {font-weight: bold; margin-right:2px;}
-.tabs span {float:left; display:block; background:url(img/tabs.gif) no-repeat right -36px; padding:0px 10px 0 0;}
+.tabs span {float:left; display:block; padding:0px 10px 0 0;}
 .tabs a {text-decoration:none; font-family:Verdana, Arial; font-size:10px;}
 .tabs a:link, .tabs a:visited, .tabs a:hover {color:black;}
 
